update waybar config

--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -64,7 +64,7 @@
       "tooltip-format-disconnected": "Disconnected",
       "interval": 3,
       "nospacing": 1,
-      "on-click": "ghostty -e iwctl"
+      "on-click": "ghostty -e nmtui-connect"
     },
     "battery": {
       "format": "{capacity}% {icon}",
@@ -93,13 +93,13 @@
       "format-disabled": "󰂲",
       "format-connected": "",
       "tooltip-format": "Devices connected: {num_connections}",
-      "on-click": "GTK_THEME=Adwaita-dark blueberry"
+      "on-click": "blueberry"
     },
     "pulseaudio": {
       "format": "",
       "format-muted": "󰝟",
       "scroll-step": 5,
-      "on-click": "GTK_THEME=Adwaita-dark pavucontrol",
+      "on-click": "pwvucontrol",
       "tooltip-format": "Playing at {volume}%",
       "on-click-right": "pamixer -t",
       "ignored-sinks": ["Easy Effects Sink"]
