--- a/linux/sway/config
+++ b/linux/sway/config
@@ -38,7 +38,7 @@ set $down j
 set $up k
 set $right l
 set $term ghostty
-set $browser librewolf
+set $browser zen
 set $notification-center swaync-client -t -sw
 
 ### Output configuration
