--- a/linux/sway/config
+++ b/linux/sway/config
@@ -244,7 +244,7 @@ bindsym XF86AudioRaiseVolume exec pamixer -i 5 && pamixer --get-volume > $WOBSOC
 bindsym XF86AudioLowerVolume  exec pamixer -d 5 && pamixer --get-volume > $WOBSOCK
 bindsym $alt+XF86AudioRaiseVolume exec pamixer -i 1 && pamixer --get-volume > $WOBSOCK
 bindsym $alt+XF86AudioLowerVolume exec pamixer -d 1 && pamixer --get-volume > $WOBSOCK
-bindsym XF86AudioMute exec pamixer set Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $WOBSOCK
+bindsym XF86AudioMute exec pamixer --toggle-mute && ([ "$(pamixer --get-mute)" = "true" ] && echo 0 || pamixer --get-volume) > $WOBSOCK
 bindsym XF86AudioMicMute exec pamixer set Capture toggle
 # keyboard gap
 bindsym $mod+XF86MonBrightnessDown exec asddown
