[sway] hardcode DP-2 disable for Apple Displsys
looks like TB cables show two separate display outputs, and a plain old
USB-C 3 cable shows only one

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -78,6 +78,10 @@ output "Samsung Display Corp. 0x419F Unknown" {
   scale 1.6
 }
 
+output DP-2 {
+  disable
+}
+
 # X1 Nano
 output 'Chimei Innolux Corporation 0x1301 Unknown' {
   scale 1.25
