[ghostty] close panes without confirming

--- a/ghostty/config
+++ b/ghostty/config
@@ -3,4 +3,5 @@ font-size = 11
 keybind = ctrl+enter=unbind
 shell-integration-features = no-cursor
 theme = IR_Black
+confirm-close-surface = false
 # window-decoration = false
