[sway] use gnome-clocks

--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -45,7 +45,7 @@
     },
     "clock": {
       "format": "{:%H:%M}",
-      "on-click": "blueberry",
+      "on-click": "gnome-clocks",
       "tooltip": false,
     },
     "custom/date": {
