--- a/linux/sway/config
+++ b/linux/sway/config
@@ -165,21 +165,11 @@ bindsym $mod+$alt+$left move workspace to output left
 # Workspaces:
 #
 # Switch to workspace
-# bindsym $mod+1 workspace number 1
-# bindsym $mod+2 workspace number 2
-# bindsym $mod+3 workspace number 3
-# bindsym $mod+4 workspace number 4
-# bindsym $mod+5 workspace number 5
-# bindsym $mod+6 workspace number 6
-# bindsym $mod+7 workspace number 7
-# bindsym $mod+8 workspace number 8
-# bindsym $mod+9 workspace number 9
-
-bindsym $mod+a workspace number 1
-bindsym $mod+s workspace number 2
-bindsym $mod+d workspace number 3
-bindsym $mod+f workspace number 4
-bindsym $mod+g workspace number 5
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
