--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -18,6 +18,7 @@
       "pulseaudio",
       "battery",
       "custom/date",
+        "custom/notification",
     ],
     "hyprland/workspaces": {
       "on-click": "activate",
@@ -49,8 +50,28 @@
       "tooltip": false,
     },
     "custom/date": {
-      "format": "{} ",
+      "format": "{}",
       "exec": "date '+%a %h %d'",
+    },
+    "custom/notification": {
+         "tooltip": false,
+         "format": "{icon}",
+         "format-icons": {
+              "notification": "<span foreground='red'><sup></sup></span>",
+              "none": "",
+              "dnd-notification": "<span foreground='red'><sup></sup></span>",
+              "dnd-none": "",
+              "inhibited-notification": "<span foreground='red'><sup></sup></span>",
+              "inhibited-none": "",
+              "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+              "dnd-inhibited-none": ""
+         },
+         "return-type": "json",
+         "exec-if": "which swaync-client",
+         "exec": "swaync-client -swb",
+         "on-click": "swaync-client -t -sw",
+         "on-click-right": "swaync-client -d -sw",
+         "escape": true
     },
     "network": {
       "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
