--- a/linux/sway/config
+++ b/linux/sway/config
@@ -234,12 +234,12 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Media controls (sorted by lenovo kb):
-bindsym XF86AudioRaiseVolume exec pamixer -i 5 && pamixer --get-volume > $WOBSOCK
-bindsym XF86AudioLowerVolume  exec pamixer -d 5 && pamixer --get-volume > $WOBSOCK
-bindsym $alt+XF86AudioRaiseVolume exec pamixer -i 1 && pamixer --get-volume > $WOBSOCK
-bindsym $alt+XF86AudioLowerVolume exec pamixer -d 1 && pamixer --get-volume > $WOBSOCK
-bindsym XF86AudioMute exec pamixer --toggle-mute && ([ "$(pamixer --get-mute)" = "true" ] && echo 0 || pamixer --get-volume) > $WOBSOCK
-bindsym XF86AudioMicMute exec pamixer set Capture toggle
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && wpctl get-volume @DEFAULT_SINK@ | cut -f2 -d' ' | awk '{print $1 * 100}'> $WOBSOCK
+bindsym XF86AudioLowerVolume  exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && wpctl get-volume @DEFAULT_SINK@ | cut -f2 -d' ' | awk '{print $1 * 100}'> $WOBSOCK
+bindsym $alt+XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+ && wpctl get-volume @DEFAULT_SINK@ | cut -f2 -d' ' | awk '{print $1 * 100}'> $WOBSOCK
+bindsym $alt+XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%- && wpctl get-volume @DEFAULT_SINK@ | cut -f2 -d' ' | awk '{print $1 * 100}'> $WOBSOCK 
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && ((wpctl get-volume @DEFAULT_SINK@ | grep MUTE >/dev/null && echo 0) || wpctl get-volume @DEFAULT_SINK@ | cut -f2 -d' ' | awk '{print $1 * 100}') > $WOBSOCK 
+bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 # keyboard gap
 bindsym $mod+XF86MonBrightnessDown exec asddown
 bindsym $mod+XF86MonBrightnessUp exec asdup
