--- a/linux/sway/config
+++ b/linux/sway/config
@@ -110,7 +110,7 @@ floating_modifier $mod normal
 for_window [title="floating_term"] floating enable
 
 # Make all GNOME (and some other) apps float
-for_window [app_id="(org.gnome.*|gnome-*|wdisplays|galculator|blueberry|discord)"] {
+for_window [app_id="(org.gnome.*|gnome-*|wdisplays|galculator)"] {
   floating enable
   border none
 }
