[sway] s/blueberry/bluetui 🤟
this one is way easier to use

--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -113,7 +113,7 @@
       "format-disabled": "󰂲",
       "format-connected": "",
       "tooltip-format": "Devices connected: {num_connections}",
-      "on-click": "blueberry",
+      "on-click": "ghostty -e bluetui",
     },
     "wireplumber": {
       "format": "{icon}",
